--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -43,6 +43,18 @@ input {
     margin-bottom: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+fieldset {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+legend {
+    font-weight: bold;
+    padding: 0 10px;
 }
 
 button {
