--- a/styles/main.css
+++ b/styles/main.css
@@ -37,7 +37,8 @@ label {
     font-weight: bold;
 }
 
-input {
+input[type="text"],
+input[type="number"] {
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 1rem;
@@ -55,6 +56,12 @@ fieldset {
 legend {
     font-weight: bold;
     padding: 0 10px;
+}
+
+input[type="number"].ability {
+    width: 50px;
+    display: inline-block;
+    margin-right: 10px;
 }
 
 button {
